# ugc-scaper

./: .gitignore  Cargo.toml  README.md  archiver.nix  flake.nix  module.nix  overlay.nix  package.nix
.github/workflows/: ci.yml
api-server/: Cargo.toml  README.md
api-server/src/: main.rs
archiver/: .gitignore  Cargo.toml
archiver/.sqlx/: query-001370da21cb3c209d1fe7779f95cab7f122d51d39347f68bba252daeab7189a.json  query-037b9db0c5f69bce8930f7515a793e18b0018587dc476dedd4c756e88a2fa877.json  query-0626bad337af6332795252dc9dc2af03eb471cbd38efe61afd712860bcd2fe62.json  query-104cec686e47c560a136e7ac479fc6a301ae08c7b339e18dda446d3a0990f655.json  query-133b2606adb67687107f717ec04114683e8ad6d6e9bb3177561971f0f12335f3.json  query-26e463ea8a7316befaee41794d230c0e78c956ccd345c38f58a049cb6b6bfdc2.json  query-2d58774b5365ac8ba3996246c26fb6b7ca63a8a6f8c086b85979f6ea7b5b8ebe.json  query-2df08faad317dd3f037d2fde18794a1a3b1c7b154118f3fca1f26ae2e3f9381c.json  query-3ec8ec092f25c86ae4160829cd419efaf0340afb5e7ad65492a1b2eae988d7c3.json  query-41dfbd9d622c42e42346499e44d2d537a277f5a5b24b98d46b0645c218270adc.json  query-4e366cccbfd194d3b52eb7209caaccebb73bf731e3f7a9f274363966925e8ee6.json  query-51956c0afc079c48272920a4bd615c47c92908889c4291337bba3cbdd162f2c3.json  query-5daea92ea98daa8e37969e9e7cdb7d1e97fea0c6e07f2ba5a2a513fc1bfc41c9.json  query-5fff8da677117dfd5d246a552a87cac254d6dee623c0e8497a28c2ce7a2d342b.json  query-626c573368c57c8bf544ba40e68ca80e034e2c918e0fe7d0e2319354f80b7de2.json  query-68839b3409d22689fd472dc5eb33e4381e9a621956f1c4ce90cda5d8872a4d6d.json  query-7abd1664e5a53abd08cf3b437032218cac18e0dc2ca67aefa2d1cde6db125108.json  query-7ff7478e1650decfe79020e2a545674bbd4b192dd0ef6331420a85897ad17166.json  query-82af3af8aaa4974e507fc6d4ac68654541c1c459d0850f4412ca1cd124fe1d60.json  query-902d2815a624acb69228dd6e7afc698dac51107067d44659592a99493ad5473a.json  query-98d74e80ad5bfcde41e6ba24592dff950957b0d0a1ee0df8c5ebc487f262556f.json  query-9de8aebc65fc0ad8b1fe1580425020559a346d1d0bbb0f6683e38674f54593b2.json  query-a3a5e50cf1dd433faf196b9cccae1417316e064be45e2ee7ba0840c0931e51f4.json  query-a559964ee9c6927333b32de71f1a666fae60ea06cb81a85b71345fb732343fdc.json  query-b153094d4f619005eecae2c23568e10c2f76613e30935b654f67f1a7b07813ea.json  query-b55c859eae400f5b4231f8b9c8417371dce54bde4d7743af588dba96c4b0fcee.json  query-b679f54e09d9d2f7e5640725bfe2dbf553a6fcd68947e247e0d68a5c8eb43eab.json  query-b7620a0c45d6964f79142d6487b10256cc3a010b027dd63b9a3b9882d908201b.json  query-ccb1cfabaf4c593cfbd8206e5c2bb2be59105f965cdcbbe04ca394d2c3751613.json  query-d06507f78e0ac005f9e978816ffea6441d19232d08b3205993ee76b86c3e558b.json  query-d27cf94073aa49a0d2d67b400f05cae073e87c1a96d6a4d419263922ae700958.json  query-db05230b038541378850c1294c260c97a209d6220583ad85c64a2f30319a6132.json  query-dbe1b2fc74c5390ebe7371c26bd1e9e6b1ed97f170f53e0f52bbb828e756eaae.json  query-dd9ca1267a43207ad70d6cf683291866c889d50dd3793a89936f0731151f8aec.json  query-e2a0bc541b90e1374bdbaf9f151af569ab906620c2b9da88d919a072c8073f6f.json
archiver/migrations/: 20250410224414_matches.sql  20250414181350_teams.sql  20250415200113_roster_history.sql  20250416070625_player.sql  20250418154032_maps.sql  20250418172836_match_data.sql
archiver/src/: archive.rs  client.rs  config.rs  main.rs
data/: README.md
examples/: player.rs  readme.rs  seasons.rs  team.rs  test.rs
src/: data.rs  error.rs  lib.rs  main.rs
src/parser/: map_history.rs  match_page.rs  mod.rs  player.rs  player_details.rs  seasons.rs  team.rs  team_lookup.rs  team_matches.rs  team_roster_history.rs  transactions.rs
tests/: player.rs  snapshot.rs
tests/data/: index.html  lookup_2v2.html  lookup_4v4.html  lookup_6v6.html  lookup_9v9.html  map_2v2.html  map_4v4.html  map_6v6.html  map_9v9.html  map_9v9_2.html  match_116246.html  player_76561197967332647.html  player_76561198024494988.html  player_76561198049312442.html  player_details_76561198024494988.html  team_10763.html  team_11789.html  team_2909.html  team_29228.html  team_32437.html  team_32595.html  team_3975.html  team_4105.html  team_5058.html  team_6929.html  team_7861.html  team_8157.html  team_matches_2157.html  team_matches_7861.html  team_roster_history_2133.html  team_roster_history_7861.html  transactions_4v4.html
tests/snapshots/: player__parse_player_details_html.snap  player__parse_player_html.snap  snapshot__parse_maps_2_html.snap  snapshot__parse_maps_4_html.snap  snapshot__parse_maps_6_html.snap  snapshot__parse_maps_9_2_html.snap  snapshot__parse_maps_9_2_html.snap.new  snapshot__parse_maps_9_html.snap  snapshot__parse_match_html.snap  snapshot__parse_older_team_html.snap  snapshot__parse_player_classes_html.snap  snapshot__parse_player_details_html.snap  snapshot__parse_player_empty_html.snap  snapshot__parse_player_html.snap  snapshot__parse_seasons_2_html.snap  snapshot__parse_seasons_4_html.snap  snapshot__parse_seasons_6_html.snap  snapshot__parse_seasons_9_html.snap  snapshot__parse_seasons_html.snap  snapshot__parse_team_1v1_sol_html.snap  snapshot__parse_team_asia_placement_html.snap  snapshot__parse_team_changed_name_html.snap  snapshot__parse_team_empty_name_change2_html.snap  snapshot__parse_team_empty_name_change_html.snap  snapshot__parse_team_empty_player_html.snap  snapshot__parse_team_html.snap  snapshot__parse_team_matches_html.snap  snapshot__parse_team_matches_old_html.snap  snapshot__parse_team_na_4v4_html.snap  snapshot__parse_team_newlines_join_date_html.snap  snapshot__parse_team_no_tz_html.snap  snapshot__parse_team_roster_history_html.snap  snapshot__parse_team_roster_history_no_group_html.snap  snapshot__parse_team_space_region_html.snap  snapshot__parse_transaction_html.snap
types/: Cargo.toml
types/src/: lib.rs
