[package]
name = "ugc-scraper"
version = "0.5.0"
edition = "2021"
rust-version = "1.71.1"
description = "Scraper for ugcleague.com"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/icewind1991/ugc-scaper"

[dependencies]
tokio = "1.44.2"
reqwest = "0.12.15"
scraper = "0.23.1"
thiserror = "2.0.3"
time = { version = "0.3.41", features = ["parsing", "macros"] }
steamid-ng = "1.0.0"
ugc-scraper-types = { version = "0.2.0", path = "./types" }
regex = "1.11.1"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "rt"] }
main_error = "0.1.2"
insta = { version = "1.42.2", features = ["json"] }
test-case = "3.3.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[features]
serde = ["ugc-scraper-types/serde"]
default = ["serde"]
