[package]
name = "ugc-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "rt", "signal"] }
main_error = "0.1.2"
#ugc-scraper = { path = "../", version = "*" }
ugc-scraper = "0.4.1"
axum = "0.7.4"
steamid-ng = "1.0.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }