[package]
name = "ugc-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "rt", "signal"] }
main_error = "0.1.2"
#ugc-scraper = { version = "*", path = ".." }
ugc-scraper = { version = "0.5.0", git = "https://github.com/icewind1991/ugc-scaper" }
#ugc-scraper = "0.5.0"
axum = "0.8.3"
steamid-ng = "1.0.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }