[package]
name = "ugc-scraper-types"
version = "0.2.0"
edition = "2021"
rust-version = "1.71.1"
description = "Scraper for ugcleague.com - data types"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/icewind1991/ugc-scaper"

[dependencies]
steamid-ng = "1.0.0"
serde = { version = "1.0.215", features = ["derive"], optional = true }
time = { version = "0.3.36", features = ["parsing", "macros"] }
thiserror = "2.0.12"
sqlx = { version = "0.8.4", default-features = false, features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "time/serde", "time/formatting"]
sqlx = ["dep:sqlx"]
default = ["serde"]
